[package]
name = "impact-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
git2 = "0.20.1"
notify = { version = "8.0.0", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
tree-sitter = "0.25.3"
tree-sitter-rust = "0.24.0"
walkdir = "2.5.0"
impact-scanner-derive = {path="../impact-scanner-derive/"}
